--- a/src/_index.html
+++ b/src/_index.html
@@ -6,5 +6,9 @@
     
     </head>
     <style id="style"></style>
-    <p>MiLauncher</p>
+    <h1>MiLauncher</h1>
+
+    <div>
+        
+    </div>
 </body>
