--- a/src/_index.html
+++ b/src/_index.html
@@ -6,9 +6,11 @@
     
     </head>
     <style id="style"></style>
-    <h1>MiLauncher</h1>
+    <h1 style="text-align: center;">MiLauncher</h1>
 
-    <div>
-        
+    <div id="games">
+        <!-- <div class="game"><img class="game-cover" src="https://hexbois.com/img/logo-curved-large.png"><p class="game-title">Hexbois</p></div>
+        <div class="game"><img class="game-cover" src="https://voxorp.com/images/icon.png"><p class="game-title">Voxorp</p></div> -->
+
     </div>
 </body>
