Remove title from the html file

--- a/src/_index.html
+++ b/src/_index.html
@@ -2,11 +2,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MiLauncher</title>
+        <title>Launcher</title>
     
     </head>
     <style id="style"></style>
-    <h1 style="text-align: center;">MiLauncher</h1>
 
     <div id="games">
         <!-- <div class="game"><img class="game-cover" src="https://hexbois.com/img/logo-curved-large.png"><p class="game-title">Hexbois</p></div>
