--- a/src/_index.html
+++ b/src/_index.html
@@ -7,9 +7,6 @@
     </head>
     <style id="style"></style>
 
-    <div id="games">
-        <!-- <div class="game"><img class="game-cover" src="https://hexbois.com/img/logo-curved-large.png"><p class="game-title">Hexbois</p></div>
-        <div class="game"><img class="game-cover" src="https://voxorp.com/images/icon.png"><p class="game-title">Voxorp</p></div> -->
-
-    </div>
+    <input id="search" type="text" placeholder="Search">
+    <div id="games"></div>
 </body>
