--- a/src/_index.html
+++ b/src/_index.html
@@ -7,6 +7,10 @@
     </head>
     <style id="style"></style>
 
-    <input id="search" type="text" placeholder="Search">
+    <form id="custom-url-form"> 
+        <input id="custom-url" type="text" placeholder="Custom URL (eg. https://hexbois.com)">
+    </form>
+    <input id="search" type="text" placeholder="Search Games/Websites">
     <div id="games"></div>
+
 </body>
