change some wording

--- a/src/_no_chromium.html
+++ b/src/_no_chromium.html
@@ -7,6 +7,6 @@
     </head>
     <style id="style"></style>
 
-    <p>This launcher is only functional on Chromium based browsers.</p>
+    <p>This launcher is currently only functional on Chromium based browsers.</p>
 
 </body>
