--- a/src/_index.html
+++ b/src/_index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Launcher</title>
-    
+        <link rel="favicon" href="https://ssl.gstatic.com/classroom/ic_product_classroom_32.png">
     </head>
     <style id="style"></style>
 
